Fix layout issues, fix ssh bugs, fix user edit bug

--- a/src/containers/dashboard/Dashboard.scss
+++ b/src/containers/dashboard/Dashboard.scss
@@ -31,4 +31,8 @@
   &.bottom-pad {
     padding-bottom: 340px;
   }
+
+  .content {
+    min-height: calc(100vh - 80px);
+  }
 }
