--- a/src/containers/home/Home.scss
+++ b/src/containers/home/Home.scss
@@ -1,5 +1,4 @@
 .homepage {
-  height: calc(100vh - 41px);
   .logo {
     font-size: 40px;
     color: #dadada;
